<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:rowCount="5"
    android:columnCount="5"
    android:id="@+id/GridLayout">

    <TextView
        android:layout_row="0"
        android:layout_column="2"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="ChEgBu"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_0_0"
        android:layout_row="1"
        android:layout_column="1"
        android:contentDescription="@string/button_0_0_description" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_0_1"
        android:layout_row="1"
        android:layout_column="2"
        android:contentDescription="@string/button_0_1_description"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_0_2"
        android:layout_row="1"
        android:layout_column="3"
        android:contentDescription="@string/button_0_2_description"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_1_0"
        android:layout_row="2"
        android:layout_column="1"
        android:contentDescription="@string/button_1_0_description"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_1_1"
        android:layout_row="2"
        android:layout_column="2"
        android:contentDescription="@string/button_1_1_description"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_1_2"
        android:layout_row="2"
        android:layout_column="3"
        android:contentDescription="@string/button_1_2_description"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_2_0"
        android:layout_row="3"
        android:layout_column="1"
        android:contentDescription="@string/button_2_0_description"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_2_1"
        android:layout_row="3"
        android:layout_column="2"
        android:contentDescription="@string/button_2_1_description"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton_2_2"
        android:layout_row="3"
        android:layout_column="3"
        android:contentDescription="@string/button_2_2_description"/>

</GridLayout>
