<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_SinglePlayer"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_DualPlayer"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Help"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Exit"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal" />
</LinearLayout>